<resources>
    <string name="app_name">Homework</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="id_hint">아이디를 입력하세요.</string>
    <string name="pw_hint">비밀번호를 입력하세요.</string>
    <string name="login">로그인</string>
    <string name="member">회원가입</string>
    <string name="personname">이름</string>
    <string name="mbti">MBTI</string>
    <string name="age">나이</string>
    <string name="sign_toast_error">아이디/비밀번호를 확인해주세요</string>
    <string name="up_toast_error">입력 되지 않은 정보가 있습니다.</string>
    <string name="end">종료</string>
</resources>