<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActicity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hi_img"

        />


    <TextView
        android:id="@+id/tv_homeid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />


    <TextView
        android:id="@+id/tv_homeid_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="가져올 아이디"
        app:layout_constraintBottom_toBottomOf="@+id/tv_homeid"
        app:layout_constraintStart_toEndOf="@+id/tv_homeid"
        app:layout_constraintTop_toTopOf="@+id/tv_homeid" />


    <TextView
        android:id="@+id/tv_homename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/personname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_homeid" />

    <TextView
        android:id="@+id/tv_homename_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="가져올 이름"
        app:layout_constraintBottom_toBottomOf="@+id/tv_homename"
        app:layout_constraintStart_toEndOf="@+id/tv_homename"
        app:layout_constraintTop_toTopOf="@+id/tv_homename" />


    <TextView
        android:id="@+id/tv_homeage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_homename" />


    <TextView
        android:id="@+id/tv_homeage_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="33"
        app:layout_constraintBottom_toBottomOf="@+id/tv_homeage"
        app:layout_constraintStart_toEndOf="@+id/tv_homeage"
        app:layout_constraintTop_toTopOf="@+id/tv_homeage" />

    <TextView
        android:id="@+id/tv_homembti_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/mbti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_homeage" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="INFJ"
        app:layout_constraintBottom_toBottomOf="@+id/tv_homembti_1"
        app:layout_constraintStart_toEndOf="@+id/tv_homembti_1"
        app:layout_constraintTop_toTopOf="@+id/tv_homembti_1" />

    <Button
        android:id="@+id/button4"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>